Fixed icon title spacing

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -5,3 +5,10 @@
 .text-center {
 	text-align: center;
 }
+.image-caption {
+	margin-bottom: 35px;
+	font-style: italic;
+}
+.logo-title {
+	margin-top: 10px;
+}
